docs/api/graphql/v1/operations/mutations/create-organization.mdx
---
pagination_next: null
pagination_prev: null
hide_table_of_contents: true
id: create-organization
title: createOrganization
---




export const Bullet = () => <><span style={{ fontWeight: 'normal', fontSize: '.5em', color: 'var(--ifm-color-secondary-darkest)' }}>&nbsp;●&nbsp;</span></>

export const SpecifiedBy = (props) => <>Specification<a className="link" style={{ fontSize:'1.5em', paddingLeft:'4px' }} target="_blank" href={props.url} title={'Specified by ' + props.url}>⎘</a></>

export const Badge = (props) => <><span className={props.class}>{props.text}</span></>

import { useState } from 'react';

export const Details = ({ dataOpen, dataClose, children, startOpen = false }) => {
  const [open, setOpen] = useState(startOpen);
  return (
    <details {...(open ? { open: true } : {})} className="details" style={{ border:'none', boxShadow:'none', background:'var(--ifm-background-color)' }}>
      <summary
        onClick={(e) => {
          e.preventDefault();
          setOpen((open) => !open);
        }}
        style={{ listStyle:'none' }}
      >
      {open ? dataOpen : dataClose}
      </summary>
      {open && children}
    </details>
  );
};




<Badge class="badge badge--secondary badge--primary" text="form schema"/>



Create a new organization. You become the owner and first admin automatically.

The `id` in the input becomes the organization's permanent identifier and cannot be
changed after creation.




```graphql
createOrganization(
  input: CreateOrganizationInput!
): OrganizationPayload
```





### Form Schema

This mutation supports dynamic form generation using JSON Schema.

- [JSON Schema](https://api.massdriver.cloud/graphql/v1/inputs/createOrganization.json)
- [UI Schema](https://api.massdriver.cloud/graphql/v1/inputs/createOrganization.ui.json)

<SchemaForm
  schemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/createOrganization.json"
  uiSchemaUrl="https://api.massdriver.cloud/graphql/v1/inputs/createOrganization.ui.json"
  name="createOrganization"
/>

### Arguments

#### [<code style={{ fontWeight: 'normal' }}>createOrganization.<b>input</b></code>](#input)<Bullet />[<code style={{ fontWeight: 'normal' }}><b>CreateOrganizationInput!</b></code>](/api/graphql/v1/types/inputs/create-organization-input.mdx) <Badge class="badge badge--secondary badge--non_null" text="non-null"/> <Badge class="badge badge--secondary " text="input"/> \{#input\} 
Create a new organization. An organization is the top-level container for all your projects, environments, and infrastructure resources.


### Type

#### [<code style={{ fontWeight: 'normal' }}><b>OrganizationPayload</b></code>](/api/graphql/v1/types/objects/organization-payload.mdx) <Badge class="badge badge--secondary " text="object"/>